--- a/mlir/lib/Dialect/MQTOpt/IR/CMakeLists.txt
+++ b/mlir/lib/Dialect/MQTOpt/IR/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_mlir_dialect_library(MLIRMQTOpt MQTOptOps.cpp DEPENDS MLIRMQTOptOpsIncGen)
+add_mlir_dialect_library(MLIRMQTOpt MQTOptOps.cpp DEPENDS MLIRMQTOptOpsIncGen
+                         MLIRMQTOptInterfacesIncGen)
