--- a/pyproject.toml
+++ b/pyproject.toml
@@ -296,6 +296,7 @@ docs = [
   "pandas[output-formatting]>=2.1.2",
   "qiskit[qasm3-import,visualization]>=1.0.0",
   "openqasm-pygments>=0.1.2",
+  "breathe",
 ]
 test = [
   "pytest>=8.3.3",
