--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ qiskit = [
 ]
 
 [project.scripts]
-mqt-core-dd-compare = "mqt.core.dd.evaluation:main"
+mqt-core-dd-compare = "mqt.core.dd_evaluation:main"
 mqt-core-cli = "mqt.core.__main__:main"
 
 [project.urls]
@@ -79,6 +79,7 @@ build.targets = [
   "mqt-core-ds",
   "mqt-core-na",
   "ir",
+  "dd",
 ]
 
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
@@ -213,7 +214,7 @@ isort.required-imports = ["from __future__ import annotations"]
     "I002", # Allow missing `from __future__ import annotations` import
 ]
 "src/mqt/core/_compat/**.py" = ["TID251", "A005"]
-"src/mqt/core/dd/evaluation.py" = ["T201"]
+"src/mqt/core/dd_evaluation.py" = ["T201"]
 "src/mqt/core/__main__.py" = ["T201"]
 
 [tool.ruff.lint.pydocstyle]
