--- a/pyproject.toml
+++ b/pyproject.toml
@@ -297,6 +297,7 @@ docs = [
   "pandas[output-formatting]>=2.1.2",
   "qiskit[qasm3-import,visualization]>=1.0.0",
   "openqasm-pygments>=0.1.2",
+  "graphviz>=0.20.3",
 ]
 test = [
   "pytest>=8.3.3",
