--- a/pyproject.toml
+++ b/pyproject.toml
@@ -298,6 +298,7 @@ docs = [
   "qiskit[qasm3-import,visualization]>=1.0.0",
   "openqasm-pygments>=0.1.2",
   "graphviz>=0.20.3",
+  "sphinx<8.2",  # due to https://github.com/missinglinkelectronics/sphinxcontrib-svg2pdfconverter/issues/26
 ]
 test = [
   "pytest>=8.3.3",
