--- a/pyproject.toml
+++ b/pyproject.toml
@@ -297,8 +297,9 @@ docs = [
   "pandas[output-formatting]>=2.1.2",
   "qiskit[qasm3-import,visualization]>=1.0.0",
   "openqasm-pygments>=0.1.2",
+  "breathe>=4.36.0",
   "graphviz>=0.20.3",
-  "sphinx<8.2",  # due to https://github.com/missinglinkelectronics/sphinxcontrib-svg2pdfconverter/issues/26
+  "sphinx>=7.4.7,<8.2",  # due to https://github.com/missinglinkelectronics/sphinxcontrib-svg2pdfconverter/issues/26
 ]
 test = [
   "pytest>=8.3.3",
@@ -307,6 +308,7 @@ test = [
   "pandas[output-formatting]>=2.1.2",
   "pandas[output-formatting]>=2.2.3; python_version >= '3.13'",
   "qiskit[qasm3-import]>=1.0.0",
+  "numpy>=2.1; python_version >= '3.13'",
 ]
 dev = [
   {include-group = "build"},
