--- a/pyproject.toml
+++ b/pyproject.toml
@@ -299,7 +299,9 @@ docs = [
   "openqasm-pygments>=0.1.2",
   "breathe>=4.36.0",
   "graphviz>=0.20.3",
-  "sphinx>=7.4.7,<8.2",  # due to https://github.com/missinglinkelectronics/sphinxcontrib-svg2pdfconverter/issues/26
+  "sphinx>=7.4.7",
+  "sphinx>=8.1.3; python_version >= '3.10'",
+  "sphinx>=8.2.3; python_version >= '3.11'",
 ]
 test = [
   "pytest>=8.3.3",
