--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,6 +138,7 @@ filterwarnings = [
   # Qiskit 1.3 deprecations
   'ignore:.*``qiskit.dagcircuit.dagcircuit.DAGCircuit.*`` is deprecated as of qiskit 1.3.0.*:DeprecationWarning:',
   'ignore:.*``qiskit.circuit.library.standard_gates.x.*`` is pending deprecation as of qiskit 1.3.*:PendingDeprecationWarning:',
+  'ignore:.*``qiskit.circuit.instruction.Instruction.condition`` is deprecated as of qiskit 1.3.0.*:DeprecationWarning:',
 ]
 log_cli_level = "info"
 testpaths = ["test/python"]
