--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,6 +94,9 @@ sdist.exclude = [
     "**/tests",
 ]
 
+cmake.verbose = true
+logging.level = "DEBUG"
+
 [tool.check-sdist]
 sdist-only = ["src/mqt/core/_version.py"]
 git-only = [
