--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["scikit-build-core>=0.11.0", "setuptools-scm>=8.1", "pybind11>=2.13.6"]
+requires = ["scikit-build-core>=0.10,<0.11.0", "setuptools-scm>=8.1", "pybind11>=2.13.6"]
 build-backend = "scikit_build_core.build"
 
 [project]
@@ -10,8 +10,8 @@ authors = [
     { name = "Lukas Burgholzer", email = "burgholzer@me.com" }
 ]
 keywords = ["MQT", "quantum-computing", "design-automation", "decision-diagrams", "zx-calculus"]
-license = "MIT"
-license-files = ["LICENSE.md"]
+#license = "MIT"
+#license-files = ["LICENSE.md"]
 
 classifiers = [
   "Development Status :: 5 - Production/Stable",
@@ -285,7 +285,7 @@ mqt-core = { workspace = true }
 [dependency-groups]
 build = [
   "pybind11>=2.13.6",
-  "scikit-build-core>=0.11.0",
+  "scikit-build-core<0.11.0",
   "setuptools-scm>=8.1",
 ]
 docs = [
