--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
     name: 🐍 Test
     needs: change-detection
     if: fromJSON(needs.change-detection.outputs.run-python-tests)
-    uses: cda-tum/mqt-workflows/.github/workflows/reusable-python-ci.yml@v1.7
+    uses: cda-tum/mqt-workflows/.github/workflows/reusable-python-ci.yml@main
     with:
       # Runs to enable
       enable-ubuntu2404: false
