--- a/mlir/mlir/include/mlir/Conversion/QuantumToMQTOpt/CMakeLists.txt
+++ b/mlir/mlir/include/mlir/Conversion/QuantumToMQTOpt/CMakeLists.txt
@@ -1,3 +1,10 @@
+# Copyright (c) 2025 Chair for Design Automation, TUM
+# All rights reserved.
+#
+# SPDX-License-Identifier: MIT
+#
+# Licensed under the MIT License
+
 set(LLVM_TARGET_DEFINITIONS QuantumToMQTOpt.td)
 mlir_tablegen(QuantumToMQTOpt.h.inc -gen-pass-decls -name QuantumToMQTOpt)
 add_public_tablegen_target(QuantumToMQTOptIncGen)
