--- a/mlir/mlir/lib/Conversion/MQTOptToQuantum/CMakeLists.txt
+++ b/mlir/mlir/lib/Conversion/MQTOptToQuantum/CMakeLists.txt
@@ -19,5 +19,5 @@ file(GLOB CONVERSION_SOURCES *.cpp)
 
 set(LIBRARIES ${conversion_libs} MLIRIR MLIRPass MQT::CoreIR ${MLIRQuantum_LIB})
 
-add_mlir_library(QuantumToMQTOpt ${CONVERSION_SOURCES} LINK_LIBS ${LIBRARIES} DEPENDS
-                 QuantumToMQTOptIncGen)
+add_mlir_library(MQTOptToQuantum ${CONVERSION_SOURCES} LINK_LIBS ${LIBRARIES} DEPENDS
+                 MQTOptToQuantumIncGen)
